fixed table cell  alignment, changed predecessor input type to number, replaced input for user with a dropdownlist

--- a/css/default.css
+++ b/css/default.css
@@ -14,9 +14,11 @@ body
 }
 
 .VerticalALign{
-    vertical-align: middle!important;
+    vertical-align: left;
 }
 
 th{
-    text-align: center;
+    text-align: left;
 }
+
+
